Add div <> adding the container & the tabs login/register buttons

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <title>Quiz App - Login/Register</title>
 </head>
 <body>
-  
+  <div class="container">
+    <h1>Quiz App</h1>
+
+    <div class="tabs">
+      <button onclick="showtab('login')">Login</button>
+      <button onclick="showtab('register')">Register</button>
+    </div>
+    
+  </div>
 </body>
 </html>
