Add div <> adding the login tab & the placeholders

--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
       <button onclick="showtab('login')">Login</button>
       <button onclick="showtab('register')">Register</button>
     </div>
-    
+
+    <div class="tab">
+      <h2>login</h2>
+      <input type="email" name="" id="" placeholder="Email">
+      <input type="password" name="" id="" placeholder="password">
+      <button onclick="login()">Login</button>
+    </div>
+
   </div>
 </body>
 </html>
