--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
       <button onclick="login()">Login</button>
     </div>
 
+    <div class="tab">
+      <h2>Register</h2>
+      <input type="email" name="" id="" placeholder="Email">
+      <input type="password" name="" id="" placeholder="password">
+      <button onclick="login()">Register</button>
+    </div>
+
   </div>
 </body>
 </html>
