Add id <> adding id's for the login & registeration sections with their placeholders

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
       <button onclick="showtab('register')">Register</button>
     </div>
 
-    <div class="tab">
+    <div id="login" class="tab">
       <h2>login</h2>
-      <input type="email" name="" id="" placeholder="Email">
-      <input type="password" name="" id="" placeholder="password">
+      <input type="email" name="" id="loginEmail" placeholder="Email">
+      <input type="password" name="" id="loginPassword" placeholder="password">
       <button onclick="login()">Login</button>
     </div>
 
-    <div class="tab">
+    <div id="register class="tab">
       <h2>Register</h2>
-      <input type="email" name="" id="" placeholder="Email">
-      <input type="password" name="" id="" placeholder="password">
+      <input type="email" name="" id="regEmail placeholder="Email">
+      <input type="password" name="" id="regPassword" placeholder="password">
       <button onclick="login()">Register</button>
     </div>
 
