--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
       <button onclick="showtab('register')">Register</button>
     </div>
 
-    <div id="login" class="tab">
+    <div id="login" class="tab active">
       <h2>login</h2>
-      <input type="email" name="" id="loginEmail" placeholder="Email">
-      <input type="password" name="" id="loginPassword" placeholder="password">
+      <input type="email" id="loginEmail" placeholder="Email">
+      <input type="password" id="loginPassword" placeholder="password">
       <button onclick="login()">Login</button>
     </div>
 
-    <div id="register class="tab">
+    <div id="register" class="tab">
       <h2>Register</h2>
-      <input type="email" name="" id="regEmail placeholder="Email">
+      <input type="email" name="" id="regEmail" placeholder="Email">
       <input type="password" name="" id="regPassword" placeholder="password">
       <button onclick="login()">Register</button>
     </div>
