--- a/pages.html/dashboard.html
+++ b/pages.html/dashboard.html
@@ -11,6 +11,6 @@
     <h1>Admin Dashboard</h1>
   </div>
 
-  <script src="script.js"></script>
+  <script src="../script.js"></script>
 </body>
 </html>
