--- a/pages.html/home.html
+++ b/pages.html/home.html
@@ -11,6 +11,6 @@
     <h1>Welcome to the Quiz App</h1>
   </div>
   
-  <script src="script.js"></script>
+  <script src="../script.js"></script>
 </body>
 </html>
