Add div <> adding the quizlist

--- a/pages.html/home.html
+++ b/pages.html/home.html
@@ -9,6 +9,7 @@
 <body>
   <div class="container">
     <h1>Welcome to the Quiz App</h1>
+    <div id="quizList"></div>
   </div>
   
   <script src="../script.js"></script>
