--- a/pages.html/quiz.html
+++ b/pages.html/quiz.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>Quiz</h1>
+    <h1 id="quizTitle">Quiz</h1>
+    <form id="quizForm"></form>
+    <button onclick="submitQuiz()">Submit Quiz</button>
+    <div id="result"></div>
   </div>
 
   <script src="../script.js"></script>
