--- a/pages.html/quiz.html
+++ b/pages.html/quiz.html
@@ -11,7 +11,7 @@
     <h1 id="quizTitle">Quiz</h1>
     <form id="quizForm"></form>
     <button onclick="submitQuiz()">Submit Quiz</button>
-    <div id="result"></div>
+    <div class="result" id="result"></div>
   </div>
 
   <script src="../script.js"></script>
