Add div <> adding the userScores

--- a/pages.html/dashboard.html
+++ b/pages.html/dashboard.html
@@ -9,6 +9,7 @@
 <body>
   <div class="container">
     <h1>Admin Dashboard</h1>
+    <div class="userScores" id="userScores"></div>
   </div>
 
   <script src="../script.js"></script>
