Edit error <> editing typo's

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1>Quiz App</h1>
 
     <div class="tabs">
-      <button onclick="showtab('login')">Login</button>
-      <button onclick="showtab('register')">Register</button>
+      <button onclick="showTab('login')">Login</button>
+      <button onclick="showTab('register')">Register</button>
     </div>
 
     <div id="login" class="tab active">
@@ -26,7 +26,7 @@
       <h2>Register</h2>
       <input type="email" name="" id="regEmail" placeholder="Email">
       <input type="password" name="" id="regPassword" placeholder="password">
-      <button onclick="login()">Register</button>
+      <button onclick="register()">Register</button>
     </div>
 
   </div>
